--- a/FUNDING.yml
+++ b/FUNDING.yml
@@ -1,2 +1,2 @@
-custom: https://ultraschall.fm/danke/
+custom: https://correctiv.org/unterstuetzen/?utm_source=website&utm_medium=menu-button&utm_term=240109
 
